scss/_section-newsletter.scss
@import "./variable";

.section_newsletter {
  background: #FFDD78;
  padding-block-start: 63px;
  padding-block-end: 54px;
  padding-inline-start: 14px;
  padding-inline-end: 14px;
}

.article_header-link {
  color: #000000;
  font-weight: normal;
  text-transform: uppercase;
}

.newsletter_article-title {
  font-size: 40px;
}

.email_input {
  border: 1px solid #DADADA;
  padding-block-start: 16px;
  padding-block-end: 16px;
  margin-block-start: 16px;
  margin-block-end: 16px;
  max-width: 346px;
}

input::-webkit-input-placeholder {
  padding-inline-start: 16px;
}

.submit_button {
  background-color: #434CCC;
  color: #FFFFFF;
  padding-block-start: calc((48px - 16px) / 2);
  padding-block-end: calc((48px - 16px) / 2);
  padding-inline-start: 45px;
  padding-inline-end: 45px;
  border: none;
}

.submit_button,
.email_input {
  border-radius: 5px;
}

.submit_button,
.section_newsletter label {
  font-weight: 700;
}

.section_newsletter label {
  display: flex;
  flex-direction: column;
  font-size: 12px;
  text-transform: uppercase;
}

// For desktop
@media (min-width: $break-point-large) {
  .section_newsletter {
    padding-inline-start: 135px;
    padding-inline-end: 135px;
    padding-block-start: 79px;
    padding-block-end: 104px;
  }

  .newsletter_article {
    // display: grid;
    // grid-template-columns: repeat(2, 1fr);
    display: flex;
    justify-content: space-between;
  }

  .newsletter_article-header {
    max-width: 382px;
   }

   .newsletter_article-title {
    font-size: 52px;
  }

  .section_newsletter form {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: calc(346px + 54px + 170px);
  }
}

